# CapSync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
documentation/: agents.md  detailed-working.md  how-it-works.md
scripts/: release.sh
src/: cli.rs  clone.rs  config.rs  detect.rs  git.rs  install.rs  lib.rs  main.rs  sync.rs  tools.rs
tests/: clone_test.rs  config_test.rs  install_test.rs  sync_test.rs  tools_test.rs
