[package]
name = "capsync"
version = "1.3.5"
edition = "2024"
authors = ["pa1nark"]
description = "A simple tool to sync your AI coding skills across different tools."
license = "CC0-1.0"
repository = "https://github.com/pixincreate/CapSync"
homepage = "https://github.com/pixincreate/CapSync"
keywords = ["ai", "skills", "sync", "capabilities"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "capsync"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
anyhow = "1.0"
tempfile = "3.0"
shellexpand = "3.0"

[dev-dependencies]
tempfile = "3.0"
