[package]
name = "capsync"
version = "2.0.1"
edition = "2024"
authors = ["pa1nark"]
description = "A simple tool to sync your AI coding skills across different tools."
license = "CC0-1.0"
repository = "https://github.com/pixincreate/CapSync"
homepage = "https://github.com/pixincreate/CapSync"
keywords = ["ai", "skills", "sync", "capabilities"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "capsync"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
dirs = "6.0"
anyhow = "1.0"
tempfile = "3.27"
shellexpand = "3.1"
git2 = "0.20.4"

[dev-dependencies]
tempfile = "3.27"
